/*
 * Copyright (C) 2018 Roman Vaivod
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
#ifndef LTTLWHWHT_EXTRACECONSAPP_H
#define LTTLWHWHT_EXTRACECONSAPP_H

#include "abstractconsoleapp.h"
#include "argsparser.h"
#include "arguments.h"

//! I am a wrapper for extrace app to run from console
class ExtraceConsoleApp : public AbstractConsoleApp
{
  public:
    ExtraceConsoleApp(): AbstractConsoleApp() {}
    ~ExtraceConsoleApp() {}
   private:
    void do_run(void) override;
    bool do_succeeded(void) const override;
    void register_args_to(ArgsParser & argsParser) const override;
    bool admits(const Arguments & arguments) const override;
    void setup_with(const Arguments & arguments) override;
};

#endif // LTTLWHWHT_EXTRACECONSAPP_H